v1.6.5 -Circular seekbar in brightness settings